--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "alpha-blog",
   "private": true,
-  "dependencies": {},
-  "engines": {
-    "node": "12.2.0",
-    "npm": "6.9.0",
-    "yarn": "1.15.2"
-  }
+  "dependencies": {}
 }
 
