--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "alpha-blog",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "engines": {
+    "node": "12.2.0"
 }
 
