--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {},
   "engines": {
-    "node": "12.2.0"
+    "node": "12.2.0",
+    "npm": "6.9.0"
+  }
 }
-
