--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,9 @@
 # gem 'pg'
 #
 
-host: localhost
-port: 5432
+default: &default
+  host: localhost
+  port: 5434
 
 development:
   adapter: postgresql
